civo-gitlab/templates/mgmt/components/nginx-apex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-apex
  namespace: default
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    cert-manager.io/issuer: cloudflare-origin-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
  - host: <DOMAIN_NAME>
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              name: http
  tls:
  - hosts:
    - <DOMAIN_NAME>
    secretName: nginx-apex-tls
